[package]
name = "ooz-sys"
version = "0.1.0"
authors = ["PizzaCrust <pizzacrustcoder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.19"

[build-dependencies]
cc = "1.0.66"
anyhow = "1.0.38"