[package]
name = "ooz-sys"
description = "Bindings to rarten's ooz fork"
version = "0.1.0"
license-file = "LICENSE"
authors = ["PizzaCrust <pizzacrustcoder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0.66"
anyhow = "1.0.38"

[profile.dev]
debug = 0